Added bookmark and some changes in edit profile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                     <a href="#" id="miniProfileFollowingLink"><span id="miniProfileFollowing"></span> Following</a>
                 </div>
             </div>
-            <div class="brick">Brick 2</div>
+            <div class="brick">
+                <h3 style="margin: 0 10px">Bookmarks:</h3>
+                <input type="text" id="bookmarkInput"/><button class="btn btn-primary" id="bookmarkButton">+</button>
+                <ul id="bookmarkList">
+                </ul>
+            </div>
         </div>
         <div id="content-feed">
             <div class="brick">
