--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </li>
 </ul>
 <button id="logoutButton" class="btn btn-danger"><i class="icon-off icon-white"></i> Logout</button>
+<button id="registerLoginButton" class="btn">Login/Register</button>
 </div>
 </div>
 </div>
