--- a/login.html
+++ b/login.html
@@ -55,6 +55,9 @@
     #message {
         background: none;
     }
+    #registerLoginButton {
+        float: none;
+    }
 </style>
 </head>
 <body>
